# book-share-cover-detection

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  constants.py  logging_config.py  main.py  models.py
app/engines/: easyocr_engine.py  florence2_engine.py  florence2_onnx_engine.py  gliner_engine.py  spacy_engine.py
app/interfaces/: book_search.py  nlp.py  ocr.py
app/services/: analyzer.py  openlibrary.py
docs/: warning-suppressions.md
docs/decisions/: 001-ocr-engine-selection.md  002-nlp-engine-selection.md  002-openvino-acceleration-abandoned.md
docs/research/: PREPROCESSING_FINDINGS.md  nlp-author-extraction.md
scripts/: README.md  sync_onnx_model.py  test_api.sh
test_app/: index.html
tests/: conftest.py
tests/integration/: generate_ocr_fixtures.py  test_gliner_engine.py  test_pipeline.py
tests/integration/fixtures/: a-restless-truth.json  gardens-of-the-moon.json  jade-city.json  mistborn.json  snow-crash.json  to-kill-a-mockingbird.json  under-the-whispering-door.json
tests/unit/: test_analyzer.py  test_easyocr_engine.py  test_florence2_engine.py  test_florence2_onnx_engine.py  test_gliner_engine.py  test_interfaces.py  test_models.py  test_openlibrary.py  test_routes.py
